--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -20,12 +20,14 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "next-sanity": "^9.8.21",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
